                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 19-06-2006 changed: updated all language files to the new format and to utf-8 encoding
 - 19-06-2006 fixed: [ 1507612 ] Date & Time will not re-allow entry after set in skin
 - 19-06-2006 changed: forcing mplayer to use utf8 encoding for mkv subtitles
 - 19-06-2006 added: Tool to translate language files, sources in Tools/Translator
 - 19-06-2006 updated: english language to new format
 - 19-06-2006 added: support for a new format of language files (old format can still be read)
                       new format: <string id="123">String</string>
 - 19-06-2006 added: "Query Info For All Albums" to My Music accessible via the context menu.
 - 19-06-2006 changed: Reorganised context menus.
 - 19-06-2006 changed: Apologies to translators, i added a new string to 'English/strings.xml' - i have made the relevant changes and the strings are now located in LocalizeStrings as they should be.
 - 19-06-2006 added: Skin.SetNumeric() built in function.
 - 19-06-2006 fixed: linksys wrtsl54gs folder listings would only list root of shares after samba update (dfs flag set in list request caused server to mad)
 - 18-06-2006 fixed: Username/pass could be shown in the name section after browsing for a new media source via Add/Edit source dialog.
 - 18-06-2006 fixed: Rotate and Zoom animations center coords were not scaled correctly
 - 18-06-2006 fixed: httpapi SendKey no longer requires the web server to be running
 - 17-06-2006 added: Master lock check on settings subcategories (does not affect settings window).
 - 17-06-2006 changed: Re-enabled settings item on context menus.